<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout
        android:id="@+id/fragment_forecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_forecast"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/textview_day_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Monday"
                android:textAlignment="center"
                android:textSize="@dimen/textview_day_txtsize" />

            <ImageView
                android:layout_width="@dimen/imageview_weather_width"
                android:layout_height="@dimen/imageview_weather_height"
                android:layout_gravity="center"
                app:srcCompat="@drawable/partly_cloudy"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textview_weather_height"
                    android:text="@string/partly_cloudy"
                    android:textSize="@dimen/textview_day_txtsize" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textview_weather_height"
                    android:text="@string/temperature"
                    android:textSize="@dimen/textview_day_txtsize" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/textview_day_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Tuesday"
                android:textAlignment="center"
                android:textSize="@dimen/textview_day_txtsize" />

            <ImageView
                android:layout_width="@dimen/imageview_weather_width"
                android:layout_height="@dimen/imageview_weather_height"
                android:layout_gravity="center"
                app:srcCompat="@drawable/storm"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textview_weather_height"
                    android:text="@string/thunderstorms"
                    android:textSize="@dimen/textview_day_txtsize" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textview_weather_height"
                    android:text="@string/temperature"
                    android:textSize="@dimen/textview_day_txtsize" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/textview_day_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Wednesday"
                android:textAlignment="center"
                android:textSize="@dimen/textview_day_txtsize" />

            <ImageView
                android:layout_width="@dimen/imageview_weather_width"
                android:layout_height="@dimen/imageview_weather_height"
                android:layout_gravity="center"
                app:srcCompat="@drawable/chance_of_storm"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textview_weather_height"
                    android:text="@string/showers"
                    android:textSize="@dimen/textview_day_txtsize" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textview_weather_height"
                    android:text="@string/temperature"
                    android:textSize="@dimen/textview_day_txtsize" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/textview_day_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Thursday"
                android:textAlignment="center"
                android:textSize="@dimen/textview_day_txtsize" />


            <ImageView
                android:layout_width="@dimen/imageview_weather_width"
                android:layout_height="@dimen/imageview_weather_height"
                android:layout_gravity="center"
                app:srcCompat="@drawable/rain"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textview_weather_height"
                    android:text="@string/scattered_showers"
                    android:textSize="@dimen/textview_day_txtsize" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textview_weather_height"
                    android:text="@string/temperature"
                    android:textSize="@dimen/textview_day_txtsize" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/textview_day_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Friday"
                android:textAlignment="center"
                android:textSize="@dimen/textview_day_txtsize" />

            <ImageView
                android:layout_width="@dimen/imageview_weather_width"
                android:layout_height="@dimen/imageview_weather_height"
                android:layout_gravity="center"
                app:srcCompat="@drawable/clouds"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textview_weather_height"
                    android:text="@string/mostly_cloudy"
                    android:textSize="@dimen/textview_day_txtsize" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textview_weather_height"
                    android:text="@string/temperature"
                    android:textSize="@dimen/textview_day_txtsize" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/textview_day_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Saturday"
                android:textAlignment="center"
                android:textSize="@dimen/textview_day_txtsize" />

            <ImageView
                android:layout_width="@dimen/imageview_weather_width"
                android:layout_height="@dimen/imageview_weather_height"
                android:layout_gravity="center"
                app:srcCompat="@drawable/partly_cloudy"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textview_weather_height"
                    android:text="@string/partly_cloudy"
                    android:textSize="@dimen/textview_day_txtsize" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textview_weather_height"
                    android:text="@string/temperature"
                    android:textSize="@dimen/textview_day_txtsize" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/textview_day_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Sunday"
                android:textAlignment="center"
                android:textSize="@dimen/textview_day_txtsize" />

            <ImageView
                android:layout_width="@dimen/imageview_weather_width"
                android:layout_height="@dimen/imageview_weather_height"
                android:layout_gravity="center"
                app:srcCompat="@drawable/rain"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textview_weather_height"
                    android:text="@string/rain"
                    android:textSize="@dimen/textview_day_txtsize" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textview_weather_height"
                    android:text="@string/temperature"
                    android:textSize="@dimen/textview_day_txtsize" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>